[package]
name = "lightjq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmpv = { version = "1.0.1", features = ["with-serde"] }
rmp = "0.8.12"
redis = { version = "0.25.2", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.58"
chrono = { version = "0.4.37", features = ["serde"] }
derive-getters = "0.3.0"
derive_builder = "0.20.0"
uuid = { version = "1", features = ["v7"] }
